assets/scss/common/_cards.scss
.scrollable-cards {
  overflow-x: auto;
  display: flex;
}

.card {
  flex: 0 0 auto;
  margin-right: 15px;
  width: 400px;
  border-radius: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.card-date {
  opacity: 70%;
  margin-bottom: 0;
}

.card-description {
  margin-top: 2px;
  margin-bottom: 1em;
}

